--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@notafunction/eslint-config": "^0.2.0",
+    "@notafunction/prettier-config": "^1.0.2",
     "nuxt": "^3.11.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "sass": "^1.72.0"
   }
 }
