--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@notafunction/eslint-config": "^0.2.0",
     "@notafunction/prettier-config": "^1.0.2",
     "nuxt": "^3.11.1",
+    "photoswipe": "^5.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxtjs/cloudinary": "^2.7.2",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
-    "sass": "^1.72.0"
+    "sass": "^1.72.0",
+    "vue-preview-imgs": "^2.0.1"
   }
 }
